--- a/css/global.css
+++ b/css/global.css
@@ -8,10 +8,7 @@
   --color-verde: #49d0b0;
   --color-bgli: #61e1ca;
 }
-body {
 
-    background-color: #49d0b0;
-}
 .content {
   padding: 1rem;
 }
@@ -36,10 +33,11 @@ body {
   border-radius: 1rem;
 
   margin: 0.5rem;
-  padding: 2rem 1rem;
+  padding: 20px;
 
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .pokemon .number {
@@ -53,10 +51,12 @@ body {
 }
 
 .pokemon .detail {
+    
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+
+  
 }
 .pokemon .detail .types {
   padding: 0;
@@ -70,14 +70,17 @@ color: white;
 background-color:var(--color-bgli);
 border-radius: .635rem;
 font-size: .825rem;
-margin: .25rem .5rem;
+ 
+margin: .5em;
 padding: .25rem .5rem;
 
 }
 
 .pokemon .detail img {
   max-width: 100%;
-  height: 70px;
-
-  align-self: flex-end;
+  height: 60px;
+  
+  padding: 5px;
+  position: absolute;
+  right: 0;
 }
