--- a/css/global.css
+++ b/css/global.css
@@ -37,7 +37,7 @@
 
   display: flex;
   flex-direction: column;
-  position: relative;
+
 }
 
 .pokemon .number {
@@ -77,10 +77,6 @@ padding: .25rem .5rem;
 }
 
 .pokemon .detail img {
-  max-width: 100%;
-  height: 60px;
-  
-  padding: 5px;
-  position: absolute;
-  right: 0;
+  height: 70px;
+  padding-right: .3em;
 }
