--- a/css/global.css
+++ b/css/global.css
@@ -10,7 +10,17 @@
 }
 
 .content {
+  margin: 0 auto;
   padding: 1rem;
+}
+
+@media screen and (min-width: 900px){ 
+  .content {
+    max-width: 900px;
+    margin: 0 auto;
+  
+    }
+
 }
 
 .content h1 {
@@ -23,17 +33,28 @@
   list-style: none;
   margin: 0;
   padding: 0;
-
+   
   display: grid;
   grid-template-columns: 1fr 1fr;
+ 
+
+}
+@media screen and (min-width: 900px){ 
+ 
+  .pokemons {
+
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
 
 .pokemon {
   background-color: var(--color-verde);
   border-radius: 1rem;
-
   margin: 0.5rem;
+  margin-left: 5px;
   padding: 20px;
+  
+  max-width: 10em;
 
   display: flex;
   flex-direction: column;
@@ -51,10 +72,12 @@
 }
 
 .pokemon .detail {
-    
+  
   display: flex;
   flex-direction: row;
   align-items: center;
+
+  justify-content: center;
 
   
 }
@@ -77,6 +100,8 @@ padding: .25rem .5rem;
 }
 
 .pokemon .detail img {
-  height: 70px;
+
+  height: 60px;
   padding-right: .3em;
+  margin-left: 10px;
 }
