--- a/css/global.css
+++ b/css/global.css
@@ -7,20 +7,28 @@
   --color-white: white;
   --color-verde: #49d0b0;
   --color-bgli: #61e1ca;
+  --color-bg: #f6f8fc;
+}
+
+body {
+
+  background-color: var(--color-bg);
 }
 
 .content {
+  
+  background-color: white;
   margin: 0 auto;
-  padding: 1rem;
+  height: 100vh;
 }
 
-@media screen and (min-width: 900px){ 
+@media screen and (min-width: 900px) {
   .content {
-    max-width: 900px;
-    margin: 0 auto;
-  
-    }
-
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 1000px;
+   
+  }
 }
 
 .content h1 {
@@ -33,16 +41,20 @@
   list-style: none;
   margin: 0;
   padding: 0;
-   
+
   display: grid;
   grid-template-columns: 1fr 1fr;
- 
-
 }
-@media screen and (min-width: 900px){ 
- 
-  .pokemons {
 
+@media screen and (min-width: 500px) {
+  .pokemons {
+    grid-template-columns: 1fr 1fr 1fr;
+    
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .pokemons {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
@@ -52,55 +64,76 @@
   border-radius: 1rem;
   margin: 0.5rem;
   padding: 20px;
-  
+
   max-width: 10em;
 
   display: flex;
   flex-direction: column;
+}
 
+@media screen and (min-width: 500px) {
+  .pokemon {
+  
+    height: 10em;
+    max-width: 15em;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .pokemon {
+  
+    height: 12em;
+    max-width: 15em;
+    justify-content: center;
+  }
 }
 
 .pokemon .number {
   color: rgba(0, 0, 0, 0.616);
-  font-size: .625rem;
+  font-size: 0.625rem;
 
   text-align: right;
 }
+
 .pokemon .name {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .pokemon .detail {
-  
   display: flex;
   flex-direction: row;
   align-items: center;
 
   justify-content: center;
-
-  
 }
+
 .pokemon .detail .types {
   padding: 0;
   margin: 0;
 
   list-style: none;
 }
-.pokemon .detail .types li{
 
-color: white;
-background-color:var(--color-bgli);
-border-radius: .635rem;
-font-size: .825rem;
- 
-margin: .5em;
-padding: .25rem .5rem;
+.pokemon .detail .types li {
+  color: white;
+  background-color: var(--color-bgli);
+  border-radius: 0.635rem;
+  font-size: 0.825rem;
 
+  margin: 0.5em;
+  padding: 0.25rem 0.5rem;
 }
 
 .pokemon .detail img {
-
   height: 60px;
-  padding-right: .3em;
+  padding-right: 0.3em;
   margin-left: 10px;
+}
+
+@media screen and (min-width: 900px) {
+  .pokemon .detail img {
+    height: 90px;
+   
+  }
 }
